--- a/documentation.html
+++ b/documentation.html
@@ -73,13 +73,25 @@
 <!-- quick start Section -->
 <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Quick Start</h2>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Search</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE's User Interface Search</h3>
     <p>
       <ol class="list" style="padding-left: 100px;">
         <li> Enter a single term into the search field on the <a href="http://debbie.bsc.es/search/">DEBBIE homepage</a> and click the Submit Query button in order to begin the search. <br>
         Example of search terms: Fibroin, Encapsulation, Bone </li>
         <li>The search results page contains a quick summary, showing mentions of the term over the years, other commonly associated terms and the study types where your search term has appeared.</li>
         <li>Below the quick summary, there are optional annotation categories. Select the categories you wish to explore further, and a drop down box will appear with further information, such as associated top terms. </li>
+      </ol>
+    </p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE's RESTful API</h3>
+    <p>
+      <ol class="list" style="padding-left: 100px;">
+        <li>Users can access the contents of DEBBIE through the RESTful API located at <a href="http://debbie.bsc.es/search/rest"><u>http://debbie.bsc.es/search/rest</u></a></li>
+        <li>Users can submit searches through the RESTful API using the following format: http://debbie.bsc.es/search/rest/[term]<br>
+        For example: <br>
+        http://debbie.bsc.es/search/rest/mesh<br>
+        http://debbie.bsc.es/search/rest/pdo<br>
+        http://debbie.bsc.es/search/rest/scaffolds
+        </li>
       </ol>
     </p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annoation Categories</h3>
